Deploy on push and updates to hugo configs and blog naming

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -2,8 +2,8 @@
 ## CHANGE THESE
 ############################
 
-baseURL: "https://thepurpleplatypus.github.io/qubtTemplate"
-title: qubtTemplate
+baseURL: "https://thepurpleplatypus.github.io/DigitalGarden"
+title: Digital Garden
 
 ############################
 ## MISC
