--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -6,8 +6,8 @@ main:
 - name: Home
   url: /
   weight: 10
-- name: Blog
-  url: /blog/
+- name: The Garden
+  url: /garden/
   weight: 20
 - name: About
   url: /about/
