--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -3,7 +3,7 @@
 ############################
 
 author:
-  name: thepurpleplatypus
+  name: Adam
   image: author.png
   greeting: "Your new Qubt site :tada:"
   icon: ":wave:"
