--- a/.github/workflows/buildDeploy.yaml
+++ b/.github/workflows/buildDeploy.yaml
@@ -76,7 +76,8 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }} # https://<username>.github.io/<repo>
+      # url: ${{ steps.deployment.outputs.page_url }} # https://<username>.github.io/<repo>
+      url: https://thepurpleplatypus.github.io/DigitalGarden
     runs-on: ubuntu-latest # runner
     needs: build # only do this if the build was succesfull
     steps:
