--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,7 +5,7 @@
 author:
   name: Adam
   image: author.png
-  greeting: "Your new Qubt site :tada:"
+  greeting: "Mushrooms! :tada:"
   icon: ":wave:"
 
 ############################
